workshop/K8SObjectExamples/07.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-workshop
  namespace: workshop-n15
  labels:
    app: workshop
spec:
  containers:
  - name: workshop
    image: flaco0/workshop:v1
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  restartPolicy: Never
