workshop/K8SObjectExamples/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-workshop
  namespace: workshop-n15
spec:
  selector:
    app: workshop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
